gitops/platform/kyverno-policies/tests/prod-workload/resources/platform-acr-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: storefront
  namespace: app-prod
spec:
  containers:
    - name: app
      image: acrplatformprod.azurecr.io/storefront:unsigned
